Release 0.1:
• [#8] Security: Fixed a typo that could in some circumstances lead to a
       crash after multiple failed authentication attempts. Thanks,
       Paul Lhussiez.
Development Version:
• Enhancement: Report missing libraries when loading via ctypes